--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
         <div id="playlistRoot">
             <div id="dragBar"></div>
             <p>플레이리스트</p>
-            <div id="playlist">
-                <div id="parentDir"><img src="asset/back.svg"></div>
-                <div id="content">음악샘플</div>
-            </div>
+            <div id="playlist"></div>
             <div id="playlistEdit">
                 <div id="uploadFolder">
                     <label for="uploadFolerInput"><img src="asset/add-folder.svg"></label>
@@ -39,5 +36,6 @@
     <script charset="utf-8" src="js/windowDrag.js"></script>
     <script charset="utf-8" src="js/loadYoutubeList.js"></script>
     <script charset="utf-8" src="js/loadFolder.js"></script>
+    <script charset="utf-8" src="js/loadList.js"></script>
 </body>
 </html>
