--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="root">
         <div id="progressTime">00:00</div>
+        <div id="selectedVolume">100</div>
         <div id="playlistRoot">
             <div id="dragBar"></div>
             <p id="selectedList">플레이리스트</p>
@@ -36,6 +37,9 @@
         </div>
         <div id="controlRoot">
             <progress id="progressBar" value="0" max="100"></progress>
+            <div id="volumeCotrolRoot">
+                <progress id="volumeControl" max="100" value="100"></progress>
+            </div>
             <p id="currentMusicName">음악을 선택하세요</p>
             <div id="controlDiv">
                 <div id="backwardBtn"><img src="asset/backward.svg"></div>
