--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <label for="uploadFolerInput"><img src="asset/add-folder.svg"></label>
                     <input id="uploadFolerInput" type="file" webkitdirectory multiple />
                 </div>
+                <div id="makeList">
+                    <img src="asset/mklist.svg">
+                </div>
                 <div id="youtubeList">
                     <img src="asset/youtube.svg">
                 </div>
@@ -51,11 +54,13 @@
     <div id="youtubePlayer"></div>
 
     <script>let exports = {};</script>
+    <script charset="utf-8" src="script/variables.js"></script>
     <script charset="utf-8" type="module" src="script/main.js"></script>
     <script charset="utf-8" src="script/windowDrag.js"></script>
     <script charset="utf-8" src="script/loadYoutubeList.js"></script>
     <script charset="utf-8" src="script/loadFolder.js"></script>
     <script charset="utf-8" src="script/loadList.js"></script>
     <script charset="utf-8" src="script/controlMusic.js"></script>
+    <script charset="utf-8" src="script/makeList.js"></script>
 </body>
 </html>
