--- a/index.html
+++ b/index.html
@@ -61,6 +61,6 @@
     <script charset="utf-8" src="script/loadFolder.js"></script>
     <script charset="utf-8" src="script/loadList.js"></script>
     <script charset="utf-8" src="script/controlMusic.js"></script>
-    <script charset="utf-8" src="script/makeList.js"></script>
+    <script charset="utf-8" src="script/manageList.js"></script>
 </body>
 </html>
